<resources>
    <string name="app_name">NotifyWagon</string>
    <string name="action_settings">Settings</string>
    <string name="push_status_register">Application prête à recevoir des push notifications</string>
    <string name="push_status_unregister">Le token n\'est pas sauvegardé.</string>
    <string name="tv_place_empty_title">Aucun lieu détecté</string>
    <string name="tv_place_empty_desc">Aucun lieu n\'est détecté actuellement.</string>
    <string name="tv_hint_message">Votre message</string>

    <string name="msg_sent_error">L\'envoi de votre message a rencontré une erreur !\nRéassayer !</string>
    <string name="msg_sent_success">Votre message a bien été envoyé !</string>
    <string name="msg_sent_in_progress">Votre message est en cours d\'envoi...</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_quai"> quai </string>
    <string name="tv_metro_ligne">  Metro ligne  %s</string>
    <string name="tv_metro_direction">  direction : %s </string>
    <string name="tv_metro_vitesse">  vitesse: %s KM/H </string>
    <string name="tv_metro_temperature">  temperature: %s°c</string>
    <string name="tv_alert_title">Alerte</string>
    <string name="tv_alert_information"> Retrouver ici les dernières alertes sur vos lignes</string>
    <string name="tv_alert_Amis"> Amis</string>
    <string name="tv_alert_Amis_information">  Retrouver ici les dernières alertes sur vos déplacements </string>
    <string name="tv_alert_Message">  Message</string>
    <string name="tv_alert_Message_information">  Retrouver ici les derniers messages de vos amis </string>


    <string name="pseudo"> pseudo</string>

    <string name="beacon_notif_title">%1$s, ligne: %2$s, direction: %3$s</string>
    <string name="friend_messages">%d message(s) d\'ami(s)</string>
    <string name="other_messages">%d autre(s) message(s)</string>
    <string name="friends_in_train">%d ami(s) dans le trains</string>

    <string name="dialog_msg_title">Votre Message</string>
    <string name="dialog_msg_type_title">Les messages</string>

    <string name="btn_send">Envoyer</string>
    <string name="btn_cancel">cancel</string>

    <string name="tv_msg_type_social">A vos amis</string>
    <string name="tv_msg_type_agression">Une agression est en cours</string>
    <string name="tv_msg_type_pickpoket">Attention pickpockets</string>
    <string name="tv_msg_type_ill">Une personne est malade</string>
    <string name="tv_msg_type_lost">J\'ai oublié mon sac</string>

    <string name="msg_pickpoket">Attention un pickpocket est action</string>
    <string name="msg_agression">Une agression est en cours. Pouvez-vous aider ?</string>
    <string name="msg_ill">Une personne est malade. Pouvez-vous aider ?</string>
    <string name="msg_lost">J\'ai oublié mon sac bleu ciel</string>

    <string name="no_beacon_title">Aucun lieux detecté</string>
    <string name="no_beacon_description">Aucun lieux n\'est détecté pour le moment. Etes-vous dans une gare ou un train ?</string>
    <string name="in_progress_title">Lieux détecté</string>
    <string name="in_progress_description">Un lieux a été détecté. Les données associées sont en cours de chargement...</string>

    <string name="title_alert">Alerte</string>
    <string name="title_lost">Perdu</string>
    <string name="title_agression">Agression</string>
    <string name="title_ill">Personne Malade</string>
    <string name="title_pickpocket">Pickpocket</string>
    <string name="title_clean">Nettoyage</string>
    <string name="title_social">Entre ami(e)s</string>
</resources>
